# unity-race

./: .gitignore  race.code-workspace
Assets/: DefaultNetworkPrefabs.asset  (+5 more)
Assets/Server/: .gitignore  CMakeLists.txt  main.cpp  tester.py  utils.sh
Assets/Server/game/gameobject/: GameObject.h
Assets/Server/utilities/bytes/: ByteSwapper.cpp  ByteSwapper.h  BytesSwaps.h
Assets/Server/utilities/bytes/tests/: ByteSwapperTest.h  ByteSwapsTest.h
Assets/Server/utilities/error/: ErrorCodes.h
Assets/Server/utilities/logger/: Logger.cpp  Logger.h
Assets/Server/utilities/sockets/address/: SocketAddressFactory.cpp  SocketAddressFactory.h
Assets/Server/utilities/sockets/address/tests/: SocketAddressFactoryTest.h
Assets/Server/utilities/sockets/helpers/: SocketAddressFamily.h  SocketUtil.cpp  SocketUtil.h
Assets/Server/utilities/types/: TypeAliaser.cpp  TypeAliaser.h
Assets/Server/utilities/types/tests/: TypeAliaserTest.h
Assets/Server/wrappers/sockets/address/: SocketAddress.cpp  SocketAddress.h
Assets/Server/wrappers/sockets/tcp/: TCPSocket.cpp  TCPSocket.h
Assets/Server/wrappers/sockets/udp/: UDPSocket.cpp  UDPSocket.h
Assets/Server/wrappers/streams/: InputMemoryStream.cpp  InputMemoryStream.h  OutputMemoryStream.cpp  OutputMemoryStream.h
Assets/Server/wrappers/streams/bit/: InputMemoryBitStream.cpp  InputMemoryBitStream.h  OutputMemoryBitStream.cpp  OutputMemoryBitStream.h
Assets/Server/wrappers/streams/bit/tests/: MemoryBitStreamTest.h
Assets/Server/wrappers/streams/byte/: InputMemoryStream.cpp  InputMemoryStream.h  OutputMemoryStream.cpp  OutputMemoryStream.h
Assets/Server/wrappers/streams/byte/tests/: MemoryStreamTest.h
Assets/Server/wrappers/streams/link/: LinkingContext.cpp  LinkingContext.h
(+47 files in other folders)
